# aipriceaction-data

./: CLAUDE.md  GUIDE_TICKER_DATA.md  TODO.md  main.py  main_get_info.py  main_get_ticker_data.py  main_prepare_data.py  ticker_180_days.csv  ticker_60_days.csv  ticker_group.json  ticker_info.json
company_data/: AAA.json  AAA_company_info.json  AAA_financial_info.json  ACB.json  ACB_company_info.json  ACB_financial_info.json  ACG.json  ACG_company_info.json  ACG_financial_info.json  ACL.json  ACL_company_info.json  ACL_financial_info.json  ACV.json  ACV_company_info.json  ACV_financial_info.json  ADS.json  ADS_company_info.json  ADS_financial_info.json  AGG.json  AGG_company_info.json  AGG_financial_info.json  AGR.json  AGR_company_info.json  AGR_financial_info.json  ANV.json  ANV_company_info.json  ANV_financial_info.json  APG.json  APG_company_info.json  APG_financial_info.json  APH.json  APH_company_info.json  APH_financial_info.json  APS.json  APS_company_info.json  APS_financial_info.json  ASM.json  ASM_company_info.json  ASM_financial_info.json  BAF.json  (+824 more)
docs/: .gitignore  Cargo.toml  README.md  data_sources.md  fmarket.js  fmarket.md  fmarket.py  lib.rs  misc.js  misc.md  misc.py  msn.js  msn.md  msn.py  output_fmarket_js.md  output_misc_js.md  output_msn_js.md  output_tcbs_js.md  output_vci_js.md  tcbs.js  tcbs.md  tcbs.py  vci.js  vci.md  vci.py  vci.rs  vci_tcbs_client.md
docs/examples/: tcbs_example.rs  vci_example.rs
market_data/: AAA.csv  ACB.csv  ACG.csv  ACL.csv  ACV.csv  ADS.csv  AGG.csv  AGR.csv  ANV.csv  APG.csv  APH.csv  APS.csv  ASM.csv  BAF.csv  (+275 more)
(+8219 files in other folders)
