[package]
name = "vietnam-stock-clients"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1.5"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "vci_example"
path = "examples/vci_example.rs"

[[example]]
name = "tcbs_example"
path = "examples/tcbs_example.rs"

[lib]
name = "vietnam_stock_clients"
path = "lib.rs"